--- a/sass/components/_header-logo.scss
+++ b/sass/components/_header-logo.scss
@@ -4,7 +4,7 @@
     line-height: 1.2;
     color: $title-text-color;
     font-family: $raleway;
-    margin-right: 93px;
+    // margin-right: 93px;
 }
 
 .logo__accent {
