--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -5,3 +5,7 @@ $white-color: #ffffff;
 
 $roboto: 'Roboto', sans-serif;
 $raleway: 'Raleway', sans-serif;
+
+$mobile: 480px;
+$tablet: 768px;
+$desctop: 1200px;
