--- a/sass/base/_base-styles.scss
+++ b/sass/base/_base-styles.scss
@@ -1,7 +1,7 @@
 body {
     background-color: $white-color;
     color: $main-text-color;
-    font-family: $roboto;
+    font-family: 'Roboto', sans-serif;
     letter-spacing: 0.03em;
 }
 
@@ -21,16 +21,28 @@ ul {
 .container {
     min-width: 320px;
     max-width: 480px;
-    // padding-left: 15px;
-    // padding-right: 15px;
+    padding-left: 15px;
+    padding-right: 15px;
     margin-left: auto;
     margin-right: auto;
+
+    @include tablet {
+        width: 768px;
+    }
+    @include desktop {
+        width: 1200px;
+    }
 }
 
-// .section {
-//     padding-top: 94px;
-//     padding-bottom: 94px;
-// }
+.section {
+    padding-top: 60px;
+    padding-bottom: 60px;
+
+    @include desktop {
+        padding-top: 94px;
+        padding-bottom: 94px;
+    }
+}
 
 .link {
     text-decoration: none;
@@ -44,11 +56,15 @@ ul {
 }
 
 .section-title {
-    font-size: 36px;
+    font-size: 28px;
     line-height: 1.17;
     text-align: center;
     color: $title-text-color;
-    // margin-bottom: 50px;
+    margin-bottom: 30px;
+    @include desktop {
+        font-size: 36px;
+        margin-bottom: 50px;
+    }
 }
 
 .invisible {
