--- a/sass/components/_benefits.scss
+++ b/sass/components/_benefits.scss
@@ -1,15 +1,30 @@
 .benefits {
+    @include tablet {
+        display: flex;
+    }
 }
 
 .benefits__item {
-
+    max-width: 450px;
+@include desktop {
+    width: 270px;
+    &+& {
+        margin-left: 30px;
+        }
+} 
 }
 
 
 
 .benefits__bg {
+    display: flex;
+    max-width: 450px;
+    height: 120px;
+    margin-bottom: 30px;
     background-color: #f5f4fa;
     border-radius: 4px;
+    justify-content: center;
+    align-items: center;
 }
 
 .benefits__icon {
@@ -22,9 +37,18 @@
     line-height: 1.14;
     text-transform: uppercase;
     color: $title-text-color;
+    margin-bottom: 10px;
+    text-align: center;
 }
 
 .benefits__text {
     font-size: 14px;
     line-height: 1.71;
+}
+
+.benefits__item {
+    & + & {
+        margin-top: 30px;
+    }
+    
 }
