--- a/sass/components/_card-set.scss
+++ b/sass/components/_card-set.scss
@@ -1,15 +1,21 @@
 .portfolio-list {
-    display: flex;
-    flex-wrap: wrap;
-    margin-left: -30px;
-    margin-top: -30px;
+    @include tablet {
+        display: flex;
+        flex-wrap: wrap;
+        margin-left: -30px;
+        margin-top: -30px;
+    }
+    
     position: relative;
 }
 
 .portfolio-list__item {
-    margin-left: 30px;
     margin-top: 30px;
-    flex-basis: calc((100% - 90px) / 3);
+    @include tablet {
+        margin-left: 30px;
+        flex-basis: calc((100% - 90px) / 3);
+    }
+    
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     &:hover,
@@ -51,6 +57,10 @@
         opacity: 1;
         transform: translateY(0);
     }
+        .portfolio-list__item:focus & {
+            opacity: 1;
+            transform: translateY(0);
+        }
 }
 
 .portfolio-list__meta {
@@ -66,6 +76,7 @@
     font-size: 18px;
     line-height: 2;
     letter-spacing: 0.06em;
+    margin-bottom: 4px;
     color: $title-text-color;
 }
 
