--- a/sass/components/_filter.scss
+++ b/sass/components/_filter.scss
@@ -1,11 +1,19 @@
 .filter {
     display: flex;
-    justify-content: center;
-    margin-bottom: 50px;
+    justify-content: left;
+    margin-bottom: 40px;
+    flex-wrap: wrap;
 }
 
 .filter__item+.filter__item {
     margin-left: 8px;
+}
+.filter__item:nth-child(4) {
+    margin-left: 0;
+    margin-top: 15px;
+}
+.filter__item:nth-child(5) {
+    margin-top: 15px;
 }
 
 .filter__button {
