--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,6 +1,15 @@
 .footer-container {
     background-color: #2f303a;
+    padding-top: 60px;
+    padding-bottom: 60px;
 }
 
 .footer-block {
+    @include tablet {
+        display: flex;
+        }
+    @include desktop {
+        display: flex;   
+    }
+    
 }
