--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,4 +1,6 @@
 .hero {
+    padding-top: 118px;
+    padding-bottom: 118px;
     background-color: #2f303a;
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
         url(../images/hero_bg.jpg);
@@ -12,19 +14,24 @@
 
 .hero__title {
     font-weight: 900;
-    font-size: 44px;
-    line-height: 1.36;
+    font-size: 26px;
+    line-height: 1.62;
     text-align: center;
     letter-spacing: 0.06em;
     color: $white-color;
     text-transform: uppercase;
+
+    @include desktop {
+        font-size: 44px;
+        line-height: 1.36;
+    }
 }
 
 .hero__button {
     cursor: pointer;
     font-weight: 700;
     font-size: 16px;
-    line-height: 1.8;
+    line-height: 1.88;
     letter-spacing: 0.06em;
     color: $white-color;
     background-color: $accent-color;
@@ -38,7 +45,7 @@
     padding-bottom: 10px;
     padding-left: 32px;
     padding-right: 32px;
-
+    border: none;
     border-radius: 4px;
     border-color: $accent-color;
 }
