--- a/sass/components/_newsletter.scss
+++ b/sass/components/_newsletter.scss
@@ -1,16 +1,32 @@
 .newsletter {
+    margin-top: 60px;
+    @include desktop {
+    margin-top: 12px;
+    margin-left: 93px;    
+    }
 
 }
 
 .newsletter__title {
+    
     display: block;
     font-size: 14px;
     line-height: 1.14;
     text-transform: uppercase;
+    text-align: center;
     color: $white-color;
+    margin-bottom: 20px;
 }
 
 .newsletter__input {
+    display: block;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 20px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    padding-left: 16px;
 
     color: $white-color;
     background-color: transparent;
@@ -31,6 +47,16 @@
 }
 
 .newsletter__submit {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 200px;
+    height: 50px;
+
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 10px;
+    padding-bottom: 10px;
 
     background: #2196f3;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
