--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -3,7 +3,10 @@
 }
 
 .team__list {
-
+    @include tablet {
+        display: flex;    
+    }
+    
 }
 
 .team {
@@ -12,13 +15,24 @@
     background-color: $white-color;
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
+    max-width: 450px;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
         0px 2px 1px rgba(0, 0, 0, 0.2);
+
+    & + & {
+        margin-top: 30px;
+    }    
+    @include desktop {
+    & + & {
+        margin-left: 30px;
+    }   
+    }
 
 }
 
 .team__container {
-
+    padding-top: 30px;
+    padding-bottom: 30px;
     text-align: center;
 }
 
@@ -26,5 +40,6 @@
     color: $title-text-color;
     font-weight: 500;
     font-size: 16px;
-    line-height: 1.87;
+    line-height: 1.18;
+    margin-bottom: 10px;
 }
