--- a/sass/base/_base-styles.scss
+++ b/sass/base/_base-styles.scss
@@ -27,10 +27,12 @@ ul {
     margin-right: auto;
 
     @include tablet {
-        width: 768px;
+        min-width: 768px;
+        max-width: 768px;
     }
     @include desktop {
-        width: 1200px;
+        min-width: 1200px;
+        max-width: 1200px;
     }
 }
 
@@ -68,6 +70,14 @@ ul {
 }
 
 .invisible {
-    color: transparent;
-    font-size: 0;
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
 }
