--- a/sass/components/_benefits.scss
+++ b/sass/components/_benefits.scss
@@ -1,13 +1,27 @@
 .benefits {
     @include tablet {
         display: flex;
+        flex-wrap: wrap;
+        gap: 30px;
+    }
+    @include desktop {
+        flex-wrap: nowrap;
+        gap: 0;
     }
 }
 
 .benefits__item {
+    &+& {
+        margin-top: 30px;
+        }
     max-width: 450px;
+    @include tablet {
+        flex-basis: calc((100% - 30px) / 2);
+        &+& {
+                margin-top: 0;
+            }
+    }
 @include desktop {
-    width: 270px;
     &+& {
         margin-left: 30px;
         }
@@ -44,11 +58,4 @@
 .benefits__text {
     font-size: 14px;
     line-height: 1.71;
-}
-
-.benefits__item {
-    & + & {
-        margin-top: 30px;
-    }
-    
 }
