--- a/sass/components/_card-set.scss
+++ b/sass/components/_card-set.scss
@@ -2,18 +2,19 @@
     @include tablet {
         display: flex;
         flex-wrap: wrap;
-        margin-left: -30px;
-        margin-top: -30px;
+        gap: 30px;
     }
-    
     position: relative;
 }
 
 .portfolio-list__item {
     margin-top: 30px;
     @include tablet {
-        margin-left: 30px;
-        flex-basis: calc((100% - 90px) / 3);
+        margin-top: 0;
+        flex-basis: calc((100% - 30px) / 2);
+    }
+    @include desktop {
+        flex-basis: calc((100% - 60px) / 3);
     }
     
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
