--- a/sass/components/_filter.scss
+++ b/sass/components/_filter.scss
@@ -3,18 +3,30 @@
     justify-content: left;
     margin-bottom: 40px;
     flex-wrap: wrap;
+    @include tablet {
+        justify-content: center;
+        margin-bottom: 30px;
+    }
+    @include desktop {
+        margin-bottom: 50px;
+    }
+}
+.filter__item {
+    &+& {
+            margin-left: 8px;
+        }
+    @media (max-width:767px) {
+            &:nth-child(4) {
+                margin-top: 15px;
+                margin-left: 0;
+            }
+        
+            &:nth-child(5) {
+                margin-top: 15px;
+            }
+    }
 }
 
-.filter__item+.filter__item {
-    margin-left: 8px;
-}
-.filter__item:nth-child(4) {
-    margin-left: 0;
-    margin-top: 15px;
-}
-.filter__item:nth-child(5) {
-    margin-top: 15px;
-}
 
 .filter__button {
     font-weight: 500;
