--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,12 +1,16 @@
 .header-border {
     border-bottom: 1px solid #ececec;
 }
+// Логотип
 .logo {
     font-weight: 700;
     font-size: 24px;
     line-height: 1.2;
     color: $title-text-color;
     font-family: $raleway;
+    @include tablet {
+        margin-right: 88px;
+    }
 
     @include desktop {
         margin-right: 93px;
@@ -17,10 +21,15 @@
 .logo__accent {
     color: $accent-color;
 }
+// ----------
+
 .nav-display {
     display: flex;
     align-items: center;
     padding: 10px 0;
+    @include tablet {
+        padding: 0;
+    }
 }
 
 .nav-container {
@@ -32,6 +41,9 @@
 .nav-list {
     @media (min-width: 768px) {
         display: flex;
+        align-items: center;
+        padding: 0;
+        margin: 0;
     }
 }
 
@@ -80,8 +92,12 @@
     & + & {
         margin-top: 32px;
     }
-    @include desktop {
-    margin-left: 50px;    
+    @include tablet {
+        padding: 0;
+        &+& {
+            margin-top: 0;
+            margin-left: 50px;
+            }
     }
 }
 
@@ -96,6 +112,9 @@
     &:hover,
     &:focus {
         fill: $accent-color;
+    }
+    @include tablet {
+        display: none;
     }
 }
 .mobile-menu__cross-icon {
@@ -120,16 +139,27 @@
 }
 
 .mobile-menu {
-    position: absolute;
-    top: 0;
-    left: 0;
+    display: flex;
     width: 100%;
-    padding: 48px 40px;
-    display: none;
-    z-index: 1;
-    background-color: $white-color;
-    &.is-open {
-        display: block;
+    @media (max-width:767px) {
+        position: absolute;
+            top: 0;
+            left: 0;
+            padding: 48px 40px;
+            display: none;
+            z-index: 1;
+            background-color: $white-color;
+        
+            &.is-open {
+                display: block;
+            }
+    }
+    @include tablet {
+        margin: 0;
+        padding: 0;
+        justify-content: space-between;
+        align-items: center;
+
     }
 }
 .contact-list {
@@ -137,9 +167,11 @@
     flex-direction: column;
     margin-top: 302px;
     @media (min-width: 768px) {
-        margin-left: auto;
-        flex-direction: row;
+        justify-content: flex-end;
         margin-top: 0;
+    }
+    @include desktop {
+        flex-direction: row;
     }
 }
 @media (max-width:767px) {
@@ -158,8 +190,11 @@
 }
 
 .contact-list__item {
+    @include tablet {
+        margin-top: 10px;
+    }
     @include desktop {
-        margin-left: 50px;
+        margin-left: 30px;
     }
 }
 
@@ -179,6 +214,10 @@
         color: $accent-color;
     }
     @include tablet {
+        font-size: 12px;
+        line-height: 1.14;
+    }
+    @include desktop {
         font-size: 14px;
         line-height: 1.14;
     }
@@ -193,8 +232,12 @@
     }
 }
 .socials-header {
-    margin-top: 64px;
-    display: flex;
+    display: none;
+    @media (max-width:767px) {
+        margin-top: 64px;
+        display: flex;
+    }
+    
 }
 .socials-header__link {
     font-weight: 500;
