--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -10,6 +10,10 @@
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    @include desktop {
+        padding-top: 200px;
+        padding-bottom: 200px;
+    }
 }
 
 .hero__title {
