--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -4,6 +4,7 @@
     position: absolute;
     top: 50%;
     left: 50%;
+    width: 450px;
     transform: translate(-50%, -50%) scale(1);
     }
     
@@ -14,6 +15,9 @@
     background-color: $white-color;
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    @include desktop {
+        width: 528px;
+    }
 }
 
 .modal__button {
