--- a/sass/components/_newsletter.scss
+++ b/sass/components/_newsletter.scss
@@ -1,10 +1,18 @@
 .newsletter {
     margin-top: 60px;
-    @include desktop {
-    margin-top: 12px;
-    margin-left: 93px;    
+    @include tablet {
+        width: 450px;
+        margin-left: auto;
+        margin-right: auto;
     }
-
+    @include desktop {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: end;
+        width: 100%;
+        margin-top: 12px;
+        margin-left: auto;    
+    }
 }
 
 .newsletter__title {
@@ -16,6 +24,13 @@
     text-align: center;
     color: $white-color;
     margin-bottom: 20px;
+
+    @include desktop {
+        text-align: left;
+        width: 100%;
+        padding: 0;
+        margin: 0;
+    }
 }
 
 .newsletter__input {
@@ -43,6 +58,12 @@
     &:focus {
         outline: none;
         border-color: $accent-color;
+    }
+
+    @include desktop {
+        width: 358px;
+        margin-left: 0;
+        margin-right: 0;
     }
 }
 
@@ -74,6 +95,12 @@
 
     &:active {
         background-color: #188ce8;
+    }
+    @include desktop {
+        display: inline-flex;
+        margin-right: 0;
+        // margin-left: 12px;
+        width: 200px;
     }
 }
 
