--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -4,9 +4,14 @@
 
 .team__list {
     @include tablet {
-        display: flex;    
+        display: flex;
+        flex-wrap: wrap;
+        gap: 30px;    
     }
-    
+    @include desktop {
+        flex-wrap: nowrap;
+        gap: 0;
+    }
 }
 
 .team {
@@ -21,7 +26,13 @@
 
     & + & {
         margin-top: 30px;
-    }    
+    } 
+    @include tablet {
+        &+& {
+            margin-top: 0;
+            }
+        flex-basis: calc((100% - 30px) / 2);
+    }
     @include desktop {
     & + & {
         margin-left: 30px;
