--- a/sass/components/_filter.scss
+++ b/sass/components/_filter.scss
@@ -11,23 +11,27 @@
         margin-bottom: 50px;
     }
 }
+
 .filter__item {
-    &+& {
+    margin-right: 8px;
+    &:last-child {
+        margin-right: 0;
+    }
+    @media screen and (max-width: 767px) {
+        &:nth-child(3n+3) {
+            margin-right: 0;
+        }
+        margin-bottom: 15px;
+        &:nth-child(n+4) {
+            margin-bottom: 0;
+        }
+    }
+    @media (max-width:392px) {
+        &:nth-child(4) {
             margin-left: 8px;
         }
-    @media (max-width:767px) {
-            &:nth-child(4) {
-                margin-top: 15px;
-                margin-left: 0;
-            }
-        
-            &:nth-child(5) {
-                margin-top: 15px;
-            }
     }
 }
-
-
 .filter__button {
     font-weight: 500;
     font-size: 16px;
