--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -3,7 +3,7 @@
     padding-bottom: 118px;
     background-color: #2f303a;
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-        url(../images/hero_bg.jpg);
+        url(../../images/Mobile/hero-mobile.jpg);
     max-width: 1600px;
     margin-left: auto;
     margin-right: auto;
@@ -14,6 +14,13 @@
         padding-top: 200px;
         padding-bottom: 200px;
     }
+        @media screen and (min-device-pixel-ratio: 2),
+        (min-resolution: 192dpi),
+        (min-resolution: 2dppx) {
+                background-image: linear-gradient(rgba(47, 48, 58, 0.4),
+                        rgba(47, 48, 58, 0.4)),
+                    url('../../images/Mobile/hero-mobile@2x.jpg')
+        }
 }
 
 .hero__title {
@@ -52,4 +59,42 @@
     border: none;
     border-radius: 4px;
     border-color: $accent-color;
+}
+
+
+
+
+
+@media screen and (min-width: 768px) {
+    .hero {
+        background-image: linear-gradient(rgba(47, 48, 58, 0.4),
+                rgba(47, 48, 58, 0.4)),
+            url('../../images/Tablet/hero-tablet.jpg');
+    }
+        @media screen and (min-device-pixel-ratio: 2),
+        (min-resolution: 192dpi),
+        (min-resolution: 2dppx) {
+            .hero {
+                background-image: linear-gradient(rgba(47, 48, 58, 0.4),
+                        rgba(47, 48, 58, 0.4)),
+                    url('../../images/Tablet/hero-tablet@2x.jpg');
+            }
+        }
+}
+
+@media screen and (min-width: 1200px) {
+    .hero {
+        background-image: linear-gradient(rgba(47, 48, 58, 0.4),
+                rgba(47, 48, 58, 0.4)),
+            url('../../images/Desktop/hero-desktop.jpg');
+    }
+        @media screen and (min-device-pixel-ratio: 2),
+        (min-resolution: 192dpi),
+        (min-resolution: 2dppx) {
+            .hero {
+                background-image: linear-gradient(rgba(47, 48, 58, 0.4),
+                        rgba(47, 48, 58, 0.4)),
+                    url('../../images/Desktop/hero-desktop@2x.jpg');
+            }
+        }
 }
