--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -19,7 +19,7 @@
         (min-resolution: 2dppx) {
                 background-image: linear-gradient(rgba(47, 48, 58, 0.4),
                         rgba(47, 48, 58, 0.4)),
-                    url('../../images/mobile/hero-mobile@2x.jpg')
+                    url(../../images/mobile/hero-mobile@2x.jpg)
         }
 }
 
@@ -69,7 +69,7 @@
     .hero {
         background-image: linear-gradient(rgba(47, 48, 58, 0.4),
                 rgba(47, 48, 58, 0.4)),
-            url('../../images/tablet/hero-tablet.jpg');
+            url(../../images/tablet/hero-tablet.jpg);
     }
         @media screen and (min-device-pixel-ratio: 2),
         (min-resolution: 192dpi),
@@ -77,7 +77,7 @@
             .hero {
                 background-image: linear-gradient(rgba(47, 48, 58, 0.4),
                         rgba(47, 48, 58, 0.4)),
-                    url('../../images/tablet/hero-tablet@2x.jpg');
+                    url(../../images/tablet/hero-tablet@2x.jpg);
             }
         }
 }
@@ -86,7 +86,7 @@
     .hero {
         background-image: linear-gradient(rgba(47, 48, 58, 0.4),
                 rgba(47, 48, 58, 0.4)),
-            url('../../images/desktop/hero-desktop.jpg');
+            url(../../images/desktop/hero-desktop.jpg);
     }
         @media screen and (min-device-pixel-ratio: 2),
         (min-resolution: 192dpi),
@@ -94,7 +94,7 @@
             .hero {
                 background-image: linear-gradient(rgba(47, 48, 58, 0.4),
                         rgba(47, 48, 58, 0.4)),
-                    url('../../images/desktop/hero-desktop@2x.jpg');
+                    url(../../images/desktop/hero-desktop@2x.jpg);
             }
         }
 }
