--- a/sass/components/_benefits.scss
+++ b/sass/components/_benefits.scss
@@ -53,6 +53,9 @@
     color: $title-text-color;
     margin-bottom: 10px;
     text-align: center;
+    @include tablet {
+        text-align: left;
+    }
 }
 
 .benefits__text {
