--- a/sass/components/_backdrop.scss
+++ b/sass/components/_backdrop.scss
@@ -4,12 +4,14 @@
     left: 0;
     width: 100%;
     height: 100%;
-    padding-top: 93px;
     padding-left: 15px;
     padding-right: 15px;
     opacity: 1;
     background-color: rgba(0, 0, 0, 0.2);
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    @include mobile {
+        padding: 0%;
+    }
 
     &.is-hidden {
         opacity: 0;
