--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -24,6 +24,7 @@
 // ----------
 
 .nav-display {
+    position: relative;
     display: flex;
     align-items: center;
     padding: 10px 0;
@@ -104,6 +105,8 @@
 
 .mobile-menu__button {
     display: inline-flex;
+    position: fixed;
+    right: 15px;
     margin-left: auto;
     padding: 0;
     border: none;
@@ -162,6 +165,7 @@
         padding: 0;
         justify-content: space-between;
         align-items: center;
+        // align-items: baseline;
 
     }
 }
@@ -295,4 +299,8 @@
     display: flex;
     flex-direction: column;
     margin-top: auto;
+    @include tablet {
+        margin-top: 0;
+        align-items: center;
+    }
 }
