--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -1,22 +1,25 @@
 .modal {
     position: relative;
-    @include tablet {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 450px;
-    transform: translate(-50%, -50%) scale(1);
-    }
+            // position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%) scale(1);
     
-    width: 100%;
+    // max-width: 450px;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
         0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
     background-color: $white-color;
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    @include mobile {
+        width: 450px;
+    }
+
     @include desktop {
         width: 528px;
+        height: 581px;
     }
 }
 
